// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> should render 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 1100;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
  gap: 12px;
}

.c8.c8.c8.c8.c8 {
  position: absolute;
  z-index: 1;
  padding: 4px;
  top: 4px;
  right: 4px;
  border-radius: 9999px;
}

.c6.c6.c6.c6.c6 {
  width: 100%;
  max-width: 328px;
  position: relative;
  background-color: hsla(0,0%,100%,1);
  border-width: 1px;
  border-radius: 8px;
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
  box-shadow: 0px 8px 24px 0px hsla(217,56%,17%,0.12);
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
}

.c9.c9.c9.c9.c9 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(211,22%,56%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c9.c9.c9.c9.c9:hover:not([disabled]) {
  color: hsla(211,26%,34%,1);
  background-color: transparent;
}

.c9.c9.c9.c9.c9:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  color: hsla(211,26%,34%,1);
}

.c9.c9.c9.c9.c9:active {
  color: hsla(211,26%,34%,1);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

<body>
  <div
    aria-hidden="true"
    data-floating-ui-inert=""
  >
    <button
      aria-controls=":r0:"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Click me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r2:"
  >
    <span
      aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-labelledby="popover-title-1"
      class="c5"
      data-blade-component="popover"
      id=":r0:"
      role="dialog"
      style="position: fixed; left: 0px; top: 0px; transform: translate(4px, -11px);"
      tabindex="-1"
    >
      <div
        class=" c6"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          data-blade-component="base-box"
        >
          <div
            class="c8"
            data-blade-component="base-box"
          >
            <button
              aria-label="Close"
              class="c9"
              data-blade-component="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  data-blade-component="svg-path"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
          <div
            class=""
            data-blade-component="base-box"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              Hello world
            </p>
          </div>
        </div>
        <svg
          aria-hidden="true"
          fill="hsla(0, 0%, 100%, 1)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%; left: -1px;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:r3:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(211, 20%, 52%, 0.18)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="hsla(0, 0%, 100%, 1)"
          />
          <clippath
            id=":r3:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
    <span
      aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<Popover /> should render popover with custom zIndex 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 9999;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
  gap: 12px;
}

.c8.c8.c8.c8.c8 {
  position: absolute;
  z-index: 1;
  padding: 4px;
  top: 4px;
  right: 4px;
  border-radius: 9999px;
}

.c6.c6.c6.c6.c6 {
  width: 100%;
  max-width: 328px;
  position: relative;
  background-color: hsla(0,0%,100%,1);
  border-width: 1px;
  border-radius: 8px;
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
  box-shadow: 0px 8px 24px 0px hsla(217,56%,17%,0.12);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c9.c9.c9.c9.c9 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(211,22%,56%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c9.c9.c9.c9.c9:hover:not([disabled]) {
  color: hsla(211,26%,34%,1);
  background-color: transparent;
}

.c9.c9.c9.c9.c9:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  color: hsla(211,26%,34%,1);
}

.c9.c9.c9.c9.c9:active {
  color: hsla(211,26%,34%,1);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

<body>
  <div
    aria-hidden="true"
    data-floating-ui-inert=""
  >
    <button
      aria-controls=":r8:"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Click me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":ra:"
  >
    <span
      aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-labelledby="popover-title-18"
      class="c5"
      data-blade-component="popover"
      id=":r8:"
      role="dialog"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class=" c6"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          data-blade-component="base-box"
        >
          <div
            class="c8"
            data-blade-component="base-box"
          >
            <button
              aria-label="Close"
              class="c9"
              data-blade-component="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  data-blade-component="svg-path"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
          <div
            class=""
            data-blade-component="base-box"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              Hello world
            </p>
          </div>
        </div>
        <svg
          aria-hidden="true"
          fill="hsla(0, 0%, 100%, 1)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:rb:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(211, 20%, 52%, 0.18)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="hsla(0, 0%, 100%, 1)"
          />
          <clippath
            id=":rb:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
    <span
      aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<Popover /> should render with title,footer 1`] = `
.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  z-index: 1100;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
  gap: 12px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c9.c9.c9.c9.c9 {
  padding-right: 12px;
}

.c11.c11.c11.c11.c11 {
  margin-left: auto;
}

.c6.c6.c6.c6.c6 {
  width: 100%;
  max-width: 328px;
  position: relative;
  background-color: hsla(0,0%,100%,1);
  border-width: 1px;
  border-radius: 8px;
  border-color: hsla(211,20%,52%,0.18);
  border-style: solid;
  box-shadow: 0px 8px 24px 0px hsla(217,56%,17%,0.12);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c12.c12.c12.c12.c12 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(211,22%,56%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c12.c12.c12.c12.c12:hover:not([disabled]) {
  color: hsla(211,26%,34%,1);
  background-color: transparent;
}

.c12.c12.c12.c12.c12:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  color: hsla(211,26%,34%,1);
}

.c12.c12.c12.c12.c12:active {
  color: hsla(211,26%,34%,1);
}

.c4.c4.c4.c4.c4 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

<body>
  <div
    aria-hidden="true"
    data-floating-ui-inert=""
  >
    <button
      aria-controls=":r4:"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c1"
        data-blade-component="base-box"
      >
        <div
          class="c2 c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-text"
          >
            Click me
          </div>
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r6:"
  >
    <span
      aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-labelledby="popover-title-11"
      class="c5"
      data-blade-component="popover"
      id=":r4:"
      role="dialog"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class=" c6"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          data-blade-component="base-box"
        >
          <div
            class="c8"
            data-blade-component="base-box"
          >
            <div
              class="c9"
              data-blade-component="base-box"
              id="popover-title-11"
            >
              <p
                class="c10"
                data-blade-component="text"
              >
                This is title
              </p>
            </div>
            <div
              class="c11"
              data-blade-component="base-box"
            >
              <button
                aria-label="Close"
                class="c12"
                data-blade-component="icon-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="20px"
                  viewBox="0 0 24 24"
                  width="20px"
                >
                  <path
                    d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                    data-blade-component="svg-path"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class=""
            data-blade-component="base-box"
          >
            <p
              class="c13"
              data-blade-component="text"
            >
              Hello world
            </p>
          </div>
          <div
            class=""
            data-blade-component="base-box"
          >
            <p
              class="c13"
              data-blade-component="text"
            >
              Footer
            </p>
          </div>
        </div>
        <svg
          aria-hidden="true"
          fill="hsla(0, 0%, 100%, 1)"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:r7:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(211, 20%, 52%, 0.18)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="hsla(0, 0%, 100%, 1)"
          />
          <clippath
            id=":r7:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
    <span
      aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-floating-ui-inert=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;
